--- a/sidecar/pom.xml
+++ b/sidecar/pom.xml
@@ -62,7 +62,11 @@
 			</exclusions>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-consul-discovery</artifactId>
+			<version>4.1.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
