--- a/sidecar/src/main/resources/application.yaml
+++ b/sidecar/src/main/resources/application.yaml
@@ -1,7 +1,7 @@
 kafka:
   request-topic: workshop_camunda_request_topic
   feedback-topic: workshop_camunda_feedback_topic
-
+  autostartup: false
 spring:
   kafka:
     bootstrap-servers: localhost:9092
@@ -21,6 +21,25 @@ spring:
       group-id: camunda-sidecar-local
       auto-offset-reset: earliest
     auto.register.schema: false
+  http:
+    log-request-details: true
+  cloud:
+    consul:
+      host: localhost
+      port: 8500
+      discovery:
+        enabled: true
+        register: true
+        deregister: true
+        #health-check-interval: 5s
+        #health-check-path: /health/check
+        #health-check-critical-timeout: 10s
+        #instance-id: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
+        heartbeat:
+          enabled: true
+          ttl: 5s
+  application:
+    name: CamundaSidecar
 camunda:
   server:
     url: http://localhost:8080/engine-rest
