--- a/nginx/conf/nginx-template.conf
+++ b/nginx/conf/nginx-template.conf
@@ -10,7 +10,18 @@ server {
     location /workflow/ {
         rewrite ^/workflow/(.*) /camunda/$1 break;
         proxy_pass http://camunda;
-
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Origin "";
+        
+        add_header 'Access-Control-Allow-Origin' $http_Origin;
+        add_header 'Access-Control-Allow-Credentials' 'true';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PATCH, PUT, DELETE, HEAD, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+        
+    
     }
 }
 
