--- a/nginx/conf/consul-nginx.conf
+++ b/nginx/conf/consul-nginx.conf
@@ -17,7 +17,7 @@ server {
         add_header 'Access-Control-Allow-Origin' $http_Origin;
         add_header 'Access-Control-Allow-Credentials' 'true';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, PATCH, PUT, DELETE, HEAD, OPTIONS';
-        add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+        add_header 'Access-Control-Allow-Headers' 'Keep-Alive,User-Agent,If-Modified-Since,Cache-Control,Content-Type';
         
     
     }
