--- a/nginx/conf/nginx-template.conf
+++ b/nginx/conf/nginx-template.conf
@@ -7,8 +7,8 @@ upstream camunda {
 server {
     listen 80;
 
-    location /workflow/ {
-        rewrite ^/workflow/(.*) /camunda/$1 break;
+    location /workflow-core/ {
+        rewrite ^/workflow-core/(.*) /camunda/$1 break;
         proxy_pass http://camunda;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -16,12 +16,24 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Origin "";
         
-        add_header 'Access-Control-Allow-Origin' $http_Origin;
-        add_header 'Access-Control-Allow-Credentials' 'true';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, PATCH, PUT, DELETE, HEAD, OPTIONS';
-        add_header 'Access-Control-Allow-Headers' 'Keep-Alive,User-Agent,If-Modified-Since,Cache-Control,Content-Type';
-        
+        add_header 'Access-Control-Allow-Origin' $http_Origin always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PATCH, PUT, DELETE, HEAD, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Keep-Alive,User-Agent,If-Modified-Since,Cache-Control,Content-Type' always;
+    }
     
+    location /workflow/ {
+        proxy_pass http://camunda;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Origin "";
+        
+        add_header 'Access-Control-Allow-Origin' $http_Origin always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PATCH, PUT, DELETE, HEAD, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Keep-Alive,User-Agent,If-Modified-Since,Cache-Control,Content-Type' always;
     }
 }
 
