--- a/sidecar/pom.xml
+++ b/sidecar/pom.xml
@@ -67,6 +67,14 @@
 			<artifactId>spring-cloud-starter-consul-discovery</artifactId>
 			<version>4.1.0</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/io.swagger.core.v3/swagger-annotations -->
+		<dependency>
+			<groupId>io.swagger.core.v3</groupId>
+			<artifactId>swagger-annotations</artifactId>
+			<version>2.2.20</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -97,6 +105,38 @@
 						<configuration>
 							<stringType>String</stringType>
 							<sourceDirectory>${project.basedir}/src/main/resources/avro/</sourceDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.openapitools</groupId>
+				<artifactId>openapi-generator-maven-plugin</artifactId>
+				<!-- RELEASE_VERSION -->
+				<version>7.2.0</version>
+				<!-- /RELEASE_VERSION -->
+				<executions>
+					<execution>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+						<configuration>
+							<inputSpec>${project.basedir}/src/main/resources/api.yaml</inputSpec>
+							<generatorName>spring</generatorName>
+							<modelPackage>org.gfs.workshop.camunda.sidecar.model.workflow</modelPackage>
+							<skipValidateSpec>true</skipValidateSpec>
+							<generateApis>false</generateApis>
+							<generateApiDocumentation>false</generateApiDocumentation>
+							<generateModelDocumentation>false</generateModelDocumentation>
+							<generateModels>true</generateModels>
+							<generateSupportingFiles>false</generateSupportingFiles>
+							<modelsToGenerate>CreateInstanceDto,ExceptionDto,PayloadData,WorkflowInstanceDto,WorkflowRequestInstanceDto</modelsToGenerate>
+							<configOptions>
+								<useSpringBoot3>true</useSpringBoot3>
+								<useJakartaEe>true</useJakartaEe>
+								<openApiNullable>false</openApiNullable>
+							</configOptions>
 						</configuration>
 					</execution>
 				</executions>
